# parallel_programming

./: .gitignore
lab_1/: CMakeLists.txt  main.py  report.md  setup.ps1
lab_1/src/: matrix_mul.cpp
lab_1/src/matrix/: 1.txt  2.txt  result.txt
lab_2/: main.py  matrix_multiplication_results_12_threads.csv  matrix_multiplication_results_1_thread.csv  matrix_multiplication_results_2_threads.csv  matrix_multiplication_results_4_threads.csv  matrix_multiplication_results_8_threads.csv  report.md  setup.ps1
lab_2/lab_2_OpenMP/: lab_2.cpp  lab_2_OpenMP.sln  lab_2_OpenMP.vcxproj
lab_2/lab_2_OpenMP/lab_2_OpenMP/x64/Debug/: lab_2_OpenMP.exe.recipe  lab_2_OpenMP.ilk  vc143.idb
lab_2/lab_2_OpenMP/lab_2_OpenMP/x64/Debug/lab_2_OpenMP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lab_2_OpenMP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lab_2/src/: matrix_generator.py
lab_2/src/matrix/: 1.txt  2.txt
lab_3/: CMakeLists.txt  _build.ps1  _flush.ps1  _run.ps1  check.py  report.md  stats.csv
lab_3/Korolev/: main.cpp  run.sh  script.sh  stats.csv
lab_3/PC/: CMakeLists.txt  _build.ps1  _flush.ps1  _run.ps1  graph_draw.py  stats.csv
lab_3/PC/src/: main.cpp
lab_3/result/1/: A.txt  B.txt
lab_3/result/12/: A.txt  B.txt
lab_3/result/2/: A.txt  B.txt
lab_3/result/4/: A.txt  B.txt
lab_3/result/8/: A.txt  B.txt
lab_3/src/: main.cpp
lab_4/: CMakeLists.txt  _build.ps1  _run.ps1  graph_draw.py  main.cu  report.md  stats_1.csv  stats_2.csv
